doc utente parte finale, aggiunta funzionalita mail

--- a/docUtente/VecchiaPosta.tex
+++ b/docUtente/VecchiaPosta.tex
@@ -97,7 +97,7 @@
   \begin{figure}[h!]%
     \includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/googleAnalyticsDoc1}
     \centering
-    \caption{Dati Google Analitycs Home Page}%
+    \caption{Dati statistici navigazione home page}%
     \label{fig:googleHomePage}%
   \end{figure}
   Dall'immagine fig.\ref{fig:googleHomePage} risulta evidente che la barra di navigazione posta sopra il logo rende difficoltosa all'utente medio comprendere quale sia il vero link alla home page.
@@ -188,13 +188,10 @@
   \begin{itemize}
     \item B\&B Camaga
     \item B\&B Oasi nel Vetoio
-    \item B\&B Grace
   \end{itemize}
   mentre per i siti extra-regione sono stati analizzati:
   \begin{itemize}
     \item Il giglio binaco (Sorrento)
-    \item Soggiorno Pezzati (Firenze)
-    \item Il Melograno (Muro Leccese)
   \end{itemize}
   Per l'analisi dettagliata sui siti web analizzati si rimanda alla sezione ``Appendice A''.
   \par Per il nuovo sito si intende migliorare l'indicizzazione sui principali motori di ricerca (google, bing, yahoo) posizionandolo nei primissimi posti 
@@ -451,24 +448,115 @@
 
 \chapter{Appendice}
 \section{Appendice A}
-Siti concorrenti
+  In questa sezione verranno mostrati i pregi e i difetti dei siti concorrenti analizzati. Anche se la ricerca è stata eseguita su più siti si riportano le considerazioni
+  solamente di due siti aziendali locali ed uno non locale che hanno colpito maggiormente il sottoscritto.
+  \begin{itemize}
+    \item \textbf{B\&B Camaga} (fig. \ref{fig:bebCamaga}): 
+      \begin{itemize}
+	\item Pro:
+	  \begin{itemize}
+	    \item Home page leggera: appena 305Kb
+	    \item Sito provvisto di una breadcrump\footnote{letteralmente bricola di pane,
+	    in internet indica il percorso dell'utente \url{http://it.wikipedia.org/wiki/Breadcrumb}}
+	  \end{itemize}
+	\item Contro:
+	  \begin{itemize}
+	    \item Caricamento della home page: anche se leggera ed esegue poche richieste HTTP impiega 14,5 secondi nel caricamento intero della pagina, causa principale è il 
+	    caricamento dell'immagine nella home;
+	    \item Stile di non gradevole effetto grafico, presenta una side-bar di destra con colori non conformi allo stile, che sembra quasi una pubblicità;
+	    \item Nel menu utilizzate etichette forvianti come ``Dove Siamo'' che invece di fornire la posizione del B\&B, cosa che si aspetta, fornisce indicazioni su come 
+	    raggiungerlo;
+	    \item Header e Menu sono presenti due menu uno laterale in verticale e l'altro appena sotto l'header con il logo/motto del B\&B. Anche in questo caso forse la scelta 
+	    grafica non è risultata ottimale, infatti utilizza un font serif per il logo rendendolo quasi illeggibile;
+	    \item La cosa più sconvolgente che si riscontra navigando su questo sito è che risulta essere incompleto in molte sue parti
+	  \end{itemize}
+	  \begin{figure}[h!]%
+	    \includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/bebCamaga}
+	    \centering
+	    \caption{Screenshot sito: \url{www.camagaaq.com}}%
+	    \label{fig:bebCamaga}%
+	  \end{figure}
+      \item \textbf{La compagnia del viaggiatore} (fig. \ref{fig:bebViaggiatore}):
+	\begin{itemize}
+	 \item Pro:
+	  \begin{itemize}
+	   \item Home page curata esteticamente propone una barra di navigazione orizzontale, uno slider e scorciatoie ai servizi principali dell'azienda
+	   \item Ogni singola pagina ha al suo interno un proprio slider di immagini
+	   \item I caratteri e il tema sono sicuramente scelte  di un esperto del settore
+	  \end{itemize}
+	 \item Contro:
+	  \begin{itemize}
+	   \item Breadcrumb non presnte
+	   \item Regolazione del font non prevista
+	   \item Alcuni contrasti risultano essere privi di effetto, come il verde chiaro su sfondo bianco.
+	  \end{itemize}
+	\end{itemize}
+	\begin{figure}[h!]%
+	    \includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/bebViaggiatore}
+	    \centering
+	    \caption{Screenshot sito: \url{http://www.compagniadelviaggiatore.it/}}%
+	    \label{fig:bebViaggiatore}%
+	  \end{figure}
+      \item \textbf{B\&B Il giglio bianco} (fig. \ref{fig:bebGiglio}):
+	\begin{itemize}
+	 \item Pro:
+	  \begin{itemize}
+	   \item Home page: contiene tutto quello che serve ad un sito vetrina. Risulta essere gradevole alla vista richiamando inoltre il nome del B\&B avendo il 
+	   tema sul bianco
+	   \item home page risulta essere leggera con solamente 721Kb caricati in 22 sec, attraverso 85 HTTP Request.
+	   \item Grafica sicuramente curata da un professionista del settore mostra scelte ben curate.
+	   \item Navigazione presenta due barre una orizzontale ed una verticale che permettono di navigare con facilità il sito.
+	   \item il widget booking-online presente in alto a destra nell'header include una funzionalità utilissima per le richieste di prenotazioni
+	  \end{itemize}
+	 \item Contro:
+	  \begin{itemize}
+	   \item Le due barre di navigazione non rendono ben comprensibile quale sia la principale e quale la secondaria. A primo impatto il sottoscritto è stato reso in inganno
+	   dalla barra verticale pensando fosse una barra di secondo livello per la navigazione nelle sezioni di secondarie
+	   \item Non è presente un breadcrump il che rende difficoltosa la navigazione ad un utente non esperto che potrebbe non ricordare il suo percorso di navigazione
+	  \end{itemize}
+	\end{itemize}
+	\begin{figure}[h!]%
+	    \includegraphics[width=0.80\textwidth,keepaspectratio=true]{img/bebGiglio}
+	    \centering
+	    \caption{Screenshot sito: \url{http://www.bbgigliobiancosorrento.it/}}%
+	    \label{fig:bebGiglio}%
+	  \end{figure}
+    \end{itemize}
+  \end{itemize}
+  Riassumendo ciò che si è notato analizzando nel dettaglio i siti proposti e altri non riportati in questo documento, risulta evidente che nella maggioranze dei siti internet
+  non è posta l'attenzione sulla navigazione di utente con handicap. Infatti nessuno sito propone un controllo del font lasciando all'utente la sola scelta di utilizzare 
+  lo zoom del browser che ovviamente comporta un malfunzionamento dei temi grafici. 
+  Anche per quanto riguarda problemi di daltonismi in molti siti sembra esserci poca attenzione, per non parlare della non curanza nell'utilizzo di attributi ALT significativi
+  per rendere il sito navigabile tramite browser vocali.
+  
 \section{Appendice B}
-In questa sezione saranno riportate tutte le informazioni recuprate dal servizio Analitycs di Google inc.\footnote{\url{https://www.google.com/analytics/}}
-\begin{figure}[h!]%
-	\includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/googleAnalyticsPaesi}
-	\centering
-	\caption{Provenienza degli accessi al sito internet}%
-	\label{fig:googleAnalyticsPaesi}%
-\end{figure}
-\begin{figure}[h!]%
-	\includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/googleAnalyticsBrowser}
-	\centering
-	\caption{Principali browser che accedono al sito}%
-	\label{fig:googleAnalyticsBrowser}%
-\end{figure}
+  In questa sezione saranno riportate tutte le informazioni recuprate dal servizio Analitycs di Google inc.\footnote{\url{https://www.google.com/analytics/}}
+  \par Dalla figura \ref{fig:googleFlusso} si nota come su quasi 300 accessi circa il 70\% abbandoni il sito dopo la navigazione della prima pagina. Ovviamente in quel 70\% una 
+  percentuale sarà costituita dai non interessati, a chi non piace la struttura ma risulta una percentuale troppo alta. Questa considerazione è avvalorata dal fatto che 
+  non viene mai preso in considerazione il link ``prenota'' della barra di navigazione principale (fig. \ref{fig:googleHomePage}), il che ci porta ad auspicarci un netto aumento delle richieste di
+  disponibilità.
+  \begin{figure}[h!]%
+    \includegraphics[width=0.80\textwidth,keepaspectratio=true]{img/googleAnalyticsPaesi}
+    \centering
+    \caption{Provenienza degli accessi al sito internet}%
+    \label{fig:googleAnalyticsPaesi}%
+  \end{figure}
+  \begin{figure}[h!]%
+    \includegraphics[width=0.80\textwidth,keepaspectratio=true]{img/googleAnalyticsBrowser}
+    \centering
+    \caption{Principali browser che accedono al sito}%
+    \label{fig:googleAnalyticsBrowser}%
+  \end{figure}
+   \begin{figure}[h!]%
+    \includegraphics[width=0.80\textwidth,keepaspectratio=true]{img/googleFlusso}
+    \centering
+    \caption{Flusso dei visitatori sul sito \url{www.vecchiaposta.it}}%
+    \label{fig:googleFlusso}%
+  \end{figure}
+  
 \newpage
 \section{Appendice C}
-Appendice dei casi d'uso
+
 \section{Appendice D}
 Gli screenshot riportati sono stati prelevati dal risultato ottenuto dall'analisi effettuata tramite il servizio offerto dal sito \url{http://colorfilter.wickline.org/}. 
 \par La mancanza delle immagini è dovuta dal fatto che il servizio non è riuscito ad analizzare i file di immagine presenti nello slider. Si fa inoltre presente che è stato 
