doc utente corretto e progetto UML inserito

--- a/docUtente/VecchiaPosta.tex
+++ b/docUtente/VecchiaPosta.tex
@@ -68,53 +68,53 @@
     \caption{veduta area del B\&B La Vecchia Posta}%
     \label{fig:bbArea}%
   \end{figure}
-  Il B\&B è a conduzione familiare, il titolare, l'autore di questo documento, è aiutato dai genitori Emanuela e Nando, incuriositi nel conoscere nuove persone per imparare usi e costumi di diversi luoghi.
+  Il B\&B è a conduzione familiare, il titolare, l'autore di questo documento, è coadiuvato dai genitori Emanuela e Nando incuriositi nel conoscere nuove persone 
+  e support del progetto.
 
 \section{Situazione attuale}
-  Il B\&B La Vecchia Posta risulta essere titolare di un dominio web dall'URL www.vecchiaposta.it, al momento non sono stati previsti alias. 
-  \par Il sito web è stato realizzato nel 2010 dalla Fermenti Grafici, web agency aquilana, che a titolo di amicizia ha realizzato
-  il comparto grafico (logo, foto, template) ed ha fornito gratuitamente e momentaneamente l'hosting.
-  Ad oggi il sito web risulta essere completamente gestito dal sottoscritto ed è hostato dalla web farm ARUBA.
-  \par Sin dalla sua prima versione il sito web del B\&B è stato realizzato utilizzando WordPress, uno dei più famosi CMS nel mondo del web e sono stati installati alcuni plug-in per fornire al sito alcune 
-  funzionalità di cui il committente aveva bisogno.
-  \par Dall'analisi dei dati raccolti il sottoscritto si è reso conto che molta della pubblicità programmata su internet, tramite il servizio ``google adword'', non portava ai risultati attesi,
-  quindi è sorta la neccessità di aggiornare il sito web attuale.
+  Il B\&B La Vecchia Posta risulta essere titolare di un dominio web dall'url \url{www.vecchiaposta.it}, al momento non sono stati previsti alias. 
+  \par Il sito web è stato realizzato nel 2010 dalla \textit{Fermenti Grafici}, web agency aquilana, che a titolo di amicizia si è occupata della realizzazione
+  del comparto grafico (logo, foto, template) ed ha, inoltre, fornito gratuitamente l'hosting.
+  \par Per lo sviluppo della prima versione del sito web del B\&B è stato realizzato utilizzando WordPress, uno dei più famosi CMS nel mondo del web e sono stati 
+  installati alcuni plug-in per fornire al sito alcune funzionalità di cui il committente aveva bisogno.
+  \par Ad oggi il sito web risulta essere completamente gestito dal sottoscritto ed è hostato dalla web farm ARUBA.
+  \\Dall'analisi dei dati raccolti il sottoscritto si è reso conto che molta della pubblicità programmata su internet, tramite il servizio \textit{Google Adword}, 
+  non portava ai risultati attesi, quindi è sorta la neccessità di aggiornare il sito web attuale.
 
 \subsection{Aspetti rilevanti del sito}
   Da interviste effettuate sui clienti del B\&B risulta essere di gradevole impatto il sito, grazie ad una grafica curata minuziosamente.
-  Sempre ascoltando i parari di terzi il sito web risulta essere di gradevole navigazione offrendo informazioni dettagliate per le singole pagine.
+  Inoltre risulta essere di gradevole navigazione offrendo informazioni dettagliate per le singole pagine.
 
 \subsection{Principali pregi}
-  L'intero sito web non ha oggetti in flash, che renderebbero il sito non navigabile dadispositivi mobile.
-  \par La home page effettua 86 HTTP Request per un peso complessivo di circa 60Kb scaricabili in circa 3 secondi con una connessione a banda larga di velocità media (4Mb)
+  L'intero sito web non ha oggetti in flash, quindi completamente navigabile da dispositivi mobile.
+  \par La home page effettua 79 HTTP Request per un peso complessivo di circa 771Kb scaricabili in circa 20 secondi con una connessione a banda larga di velocità media (4Mb).
   \par La struttura dell'intero sito è sempre coerente fornendo uno spazio per l'immagine principale della pagina, che può anche essere uno slider, 
-  e dello spazio binanco per il testo rendendo la lettura gradevole non affaticando gli occhi del lettore.
+  e dello spazio binanco per il testo rendendo la lettura gradevole non affaticando gli occhi del lettore grazie anche all'utilizzo di un font sans-serif.
 
 \subsection{Principali difetti}
   I principali difetti sono legati dalla difficoltà nel raggiungere il collegamento per effettuare una richiesta di prenotazione, accessibile 
-  solamente tramite la barra di nabigazione o tramite il link nascosto dietro il testo dell'ultimo articolo inserito, che nel nostro caso sono le ultime news.
-  \par Questo è visibile anche dai dati statistici raccolti da Google Analytics che mostrano come l'utente navighi nel sito 
-  poco meno di 2 minuti e lo abbandona prima di inviare una richiesta di prenotazione. Evidente dal fatto che il link prenota non risulta mai essere cliccato.
+  solamente tramite la barra di navigazione o tramite il link nascosto dietro il testo dell'offerta attiva.
+  \par Questo è confermato, anche dai dati statistici raccolti da Google Analytics, che mostrano come l'utente navighi nel sito per poco meno di 2 minuti e 
+  lo abbandoni prima di inviare una richiesta di prenotazione. Evidenziato dal fatto che il link \textit{prenota} non risulta mai essere cliccato.
   \begin{figure}[h!]%
     \includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/googleAnalyticsDoc1}
     \centering
     \caption{Dati statistici navigazione home page}%
     \label{fig:googleHomePage}%
   \end{figure}
-  Dall'immagine fig.\ref{fig:googleHomePage} risulta evidente che la barra di navigazione posta sopra il logo rende difficoltosa all'utente medio comprendere quale sia il vero link alla home page.
-  Si notano alcuni click sullo spazio negativo della barra di navigazione (più del 40\% degli utenti).
+  Dall'immagine fig.\ref{fig:googleHomePage} risulta evidente che la barra di navigazione posta sopra il logo rende difficoltosa all'utente medio comprendere 
+  quale sia il vero link alla home page. Si notano alcuni click sullo spazio negativo della barra di navigazione (più del 40\% degli utenti).
   \par Nella sezione ``Appendice B'' vengono riportare altre immagini e dettagli a supporto degli aspetti negativi della versione attuale 
   del sito web.
-  \par Non permette la modifica della grandezza del font, non permettendo una facile navigazione a persone ipovedenti. Analizzando il tema del sito 
-  con il serivizio offerto dal sito \url{http://colorfilter.wickline.org/} risulta perdere completamente l'effetto desiderato mostrandosi piatto 
-  e privo di effetti grafici. 
+  \par Inoltre si riscontra che non è prevista la modifica della grandezza del font, non permettendo una facile navigazione a persone ipovedenti. 
+  Analizzando il tema del sito con il serivizio offerto dal sito \url{http://colorfilter.wickline.org/} risulta perdere completamente l'effetto desiderato mostrandosi piatto 
+  e privo di effetti grafici, almeno per le forme di daltonismo più comuni.
 
 \section{Obiettivi generali del nuovo sito}
-  La nuova versione del sito web dovrà eliminare queste problematiche, invogliando gli utenti ad inviare più richieste di prenotazioni inserendo nella parte ``sopra la piega'' 
-  un link al ``form'' di prenotazione di prenotazione.
-  \par Per il comparto grafico si è scelta di comprare un tema html dal sito \url{www.themeForest.com}, con le caratteristiche grafiche richieste.
-  \\ Il nuovo sito inoltre, nella versione base dovrà fornire le informazioni ad oggi presenti migliorando la navigabilità spostando la barra di navigazione al di sotto del logo del B\&B, 
-  aspetto grafico maggiormento utilizzato.
+  La nuova versione del sito web dovrà eliminare queste problematiche, invogliando gli utenti ad inviare più richieste di prenotazioni
+  inserendo nella parte ``sopra la piega'' una scorciatoia al ``form'' di prenotazione.
+  \par Il nuovo sito inoltre, nella versione base dovrà fornire le informazioni ad oggi presenti migliorando la navigabilità spostando la barra di navigazione 
+  al di sotto del logo del B\&B, aspetto grafico maggiormento utilizzato.
   \par L'home page del sito dovrà restare leggera e non dovrà prevedere nessuna funzionalità in flash, che la renderebbe inaccessibile dai dispositivi mobile.
   L'intento è di fornire ``\textit{sopra la piega}`` tutte le informazioni utili come:
   \begin{itemize}
@@ -124,7 +124,8 @@
     \item form per la richiesta di disponibilità
     \item preview dell'offerta attiva
   \end{itemize}
-  \par Inoltre il nuovo sito dovrà essere ''responsive'' garantendo la completa compatibilità con i maggiori device che ad oggi accedono ad internet.
+  \par Si è scelto quindi di utilizzare il servizio di vendita di temi di \url{www.themeforest.com} acquistando un tema grafico che risponda alle nostre esigenze.
+  \par La nuova versione del sito dovrà essere ''responsive'' garantendo la completa compatibilità con i maggiori device che ad oggi accedono ad internet.
   \\In particolare:
   \begin{itemize}
     \item 1200px Desktop
@@ -140,7 +141,7 @@
   \begin{itemize}
     \item L'amministratore
     \item L'utente occasionale (utente che raggiunge il sitoweb involontariamente) (aka \textit{Utente})
-    \item Il cliente (navigatore di internet che effettua una richiesta di prenotazione)
+    \item Il cliente, navigatore di internet che effettua una richiesta di prenotazione e/o è stato già cliente dell'azienda.
   \end{itemize}
   \begin{center}
     \begin{tabular}{||m{3cm}||m{4cm}|m{1,5cm}||m{4cm}|m{1,5cm}||}
@@ -160,10 +161,11 @@
   \end{center}
   \subsection{Profilo degli utenti}
     \begin{itemize}
-    \item \textbf{Cliente}: sono i navigatori di internet che cercando una destinazione per le proprie vacanze si sono imbattuti sul sito web della struttura e hanno la volotà di inviare 
-    una richiesta di disponibilità. Rientrano in questa categoria di utenza anche i clienti ``storici'' del B\&B avendo già soggiornato nella struttura in un'altra occasione.
-    \item \textbf{Utente}: sono i navigatori di internet definiti come i visitatori di rimbalzo, ovvero quegli utenti di internet che non volendo sono giunti sul sito internet del B\&B. 
-    Su questi utenti che il titolare vorrebbe invogliare a fare una richiesta di disponibilità.
+    \item \textbf{Cliente}: sono i navigatori di internet che cercando una destinazione per le proprie vacanze si sono imbattuti sul sito web della struttura 
+    e hanno la volotà di inviare una richiesta di disponibilità. 
+    Rientrano in questa categoria di utenza anche i clienti ``storici'' del B\&B avendo già soggiornato nella struttura in un'altra occasione.
+    \item \textbf{Utente}: sono i navigatori di internet definiti come i visitatori di rimbalzo, ovvero quegli utenti di internet che non volendo sono giunti sul sito 
+    internet del B\&B. Sono questi utenti a fornire feedback sulla scelta di inserire una scorciatoia al form per le prenotazioni.
     \end{itemize}
 
 \section{Scenari d'uso}
@@ -188,7 +190,7 @@
   \par I siti web locali analizzati sono stati:
   \begin{itemize}
     \item B\&B Camaga
-    \item B\&B Oasi nel Vetoio
+    \item La compagnia del viaggiatore
   \end{itemize}
   mentre per i siti extra-regione sono stati analizzati:
   \begin{itemize}
@@ -284,11 +286,11 @@
 	\item UC2: Aggiornare il sistema
 	\item UC3: Mantenere frunzionante il sistema
       \end{enumerate}
-    \item Cliente: 
+    \item Utente: 
       \begin{enumerate}
 	\item UC4: Visualizzare le informazioni di contatto
       \end{enumerate}
-    \item Utente: 
+    \item Cliente: 
       \begin{enumerate}
 	\item UC5: Effettuare una richiesta di prenotazione
       \end{enumerate}
@@ -571,6 +573,12 @@
 \newpage
 \section{Appendice C}
 In questa sezione del documento verranno riportati i principali casi d'uso riscontrati nella prima fase di analisi.
+\begin{figure}[h!]%
+    \includegraphics[width=0.85\textwidth,keepaspectratio=true]{img/useCase}
+    \centering
+    \caption{Diagramma UML dei casi d'uso}%
+    \label{fig:useCase}%
+  \end{figure}
 \\Il primo caso d'uso analizzato è quello che vede l'amministratore come utente principale ed è nella fase di dover aggiornare le informazioni presenti nel sito internet.
   \input{uc1}
 Il secondo ed ultimo caso d'uso preso in esame è quello che vede il cliente alle prese con una richiesta di prenotazione.
