mappaSito, correzione pianoQualita, gabbiaLogica iniziata gitignore modificata

--- a/documentazione/pianoQualita/dipompeo-pianoQualita.tex
+++ b/documentazione/pianoQualita/dipompeo-pianoQualita.tex
@@ -32,7 +32,7 @@
       \begin{minipage}{0.8\textwidth}
 	\begin{flushleft} \large
 	  \emph{Autore:} Daniele Di Pompeo \\[0.5cm]
-	  \emph{Versione documento: 1.0}\\[0.5cm]
+	  \emph{Versione documento: 1.1}\\[0.5cm]
 	  \emph{Data emissione del documento: \today}\\[0.5cm]
 	\end{flushleft}
       \end{minipage}
@@ -117,7 +117,7 @@ github del progetto.
 \section{Ambiente di sviluppo}
 Il progetto sarà sviluppato nel seguente ambiente:
 \begin{itemize}
- \item \textbf{Macchine}
+ \item \textbf{Macchine}:
   \begin{itemize}
     \item Laptop Dell studio 1550 
     \item Laptop Asus k55
