bug lingua fix e progV2

--- a/documentazione/visualDesign/dipompeo-layout.tex
+++ b/documentazione/visualDesign/dipompeo-layout.tex
@@ -59,9 +59,8 @@ Gli oggetti cliccabili risultano essere tutti distinguibili grazie all'utilizzo 
 \par Le varie sezioni del sito risultano essere identificabili grazie ad un effetto grafico sugli elementi del menu (aumento del weight del font).
 \par \'E possibile all'utente modificare la grandezza del font utilizzando i comandi del browser non subendo modifiche al comparto grafico a meno di un eccessivo zoom.
 \par Le varie sezioni del sito mantengono la stessa disposizione degli elementi non causando ``labirintite'' all'utente.
-\par I risultato ottenuti per il download dell'homepage si possono considerare accettabili. \'E stato misurato un tempo di download e formattazione del DOM pari a 12sec utilizzando
-una connessione a larga banda (>4Mbit/s). Analizzando i risultati ottenuti si nota come il delay del download sia causato dal reperimento di font tramite servizio font google e per il 
-reperimento delle varie librerie javascript utilizzate.7
+\par I risultato ottenuti per il download dell'homepage si possono considerare accettabili. \'E stato misurato un tempo di download e formattazione del DOM pari a 1,2sec utilizzando
+una connessione a larga banda (>4Mbit/s). Il tempo di download risulta essere ottimale, secondo i parametri rilasciati da Google inc.
 
 \section*{Presentazione della pagina}
 Si nota che alla risoluzione ottimale (1200px di larghezza) l'applicazione web risulta essere completamente prova di scroll orizzontali.
