--- a/documentazione/convalideNav/dipompeo-vecchiaposta.it.tex
+++ b/documentazione/convalideNav/dipompeo-vecchiaposta.it.tex
@@ -72,14 +72,13 @@ All'ultima domanda il test non è riuscito a fornire una risposta dettagliata es
 Per completezza di informazioni si allega il video dell'utilizzo del prototipo da parte dell'utente medio, consultabile all'indirizzo \url{http://youtu.be/_KEx4eMBWiU}, che risulta raggiungere i prorpri obiettivi rapidamente senza 
 problematiche.
 \par Nelle successive fase di sviluppo si effettueranno test successivi mostrando all'utente il tema completo.
-\par L'utilizzo di font sans-serif aumenta la facilità di lettura non affaticando l'utente.
 
 \section*{Struttura dei menu}
 La struttura del menu risulta essere completamente visibile sia alla risoluzione scelta per la progettazione, sia ad una risoluzione più bassa.
 Sono stati evitati scroll orizzontali nelle risoluzioni 1024px (\ref{fig:nav1024}) e 1200px (\ref{fig:nav1200}) (risoluzione di base) che coprono quasi la totalità 
-delle configurazioni degli utenti che navigano su internet.
-La struttura del menu mantiene una proporzionalità accettabile con i contenuti informativi in entrambe le risoluzioni considerate. 
-Per quanto riguarda risoluzioni più basse e dispositivi mobile, si rimanda ad una versione successiva dello sviluppo.
+delle configurazioni degli utenti che navigano su internet non attraverso dispositivi mobile.
+\\Per quanto riguarda risoluzioni più basse e dispositivi mobile, si rimanda ad una versione successiva dello sviluppo.
+\par La struttura del menu mantiene una proporzionalità accettabile con i contenuti informativi in entrambe le risoluzioni considerate. 
 \\Si mostrano due screenshot alle due risoluzioni.
 \begin{figure}[h!]%
     \includegraphics[width=0.9\textwidth,keepaspectratio=true]{../img/nav1024}
@@ -98,27 +97,25 @@ Per quanto riguarda risoluzioni più basse e dispositivi mobile, si rimanda ad u
 \newpage
 \section*{Navigazione}
 Per la progettazione delle gabbie laogiche ci si è concentrati nello sviluppo di una struttura delle pagine che consenta di essere ripetibile nelle varie sezioni.
-\par Si è scelto di realizzare per tutte le sezioni una pagina di presentazione che mostri all'utente un digest del contenuto mostrando in anteprima i link 
-più importanti per le sotto sezioni.
 \par Le sotto sezioni sono state strutturate in modo tale da avere sopra la piega tutte le informazioni utili alla navigazione. In alto a sinistra si è inserito un'area 
-destinata a contenere uno slider per le immagini relative alla pagina o a contenere la mappa stradale. Parallelamente il lato destro è stato utilizzato 
-per inserire una breve descrizione, nel caso delle pagine delle camere e il link alla prenotazione.
- \par Nella zona appena sotto la piega sono state inserite informazioni meno utili o utilizzate solamente da utenti veramente interessati al loro contenuto.
- \par In ogni modo la struttura del sito grazie alla ripetizione porta l'utente utilizzatore a non perdersi mantenendo alto lo stile del sito.
+destinata a contenere uno slider per le immagini relative alla pagina o a contenere la mappa stradale. Parallelamente il lato destro è stato utilizzato per 
+fornire all'utente informazioni utili sottoforma di lista puntata e una scorciatoia alla prenotazione.
+\\Sotto la piega si è riportata la descrizione dettagliata della sezione.
+ \par In ogni modo la struttura del sito grazie alla ripetizione porta l'utente utilizzatore a non perdersi mantenendo alto lo stile dello stesso.
 
 \section*{Etichette}
-Nel documento dei requisiti, sezione 2.1.1 \textit{Architettura informativa}, sono state individuate alcune aree semantiche che dovevano essere inserite nel sito.
-Si è scelto di mantenere la stessa struttura nelle etichette del menu perchè non si riscontrano problematiche di incoerenza e/o possibili incomprensioni. 
+Nel documento dei requisiti, in allegato alla documentazione, alla sezione 2.1.1 \textit{Architettura informativa}, sono state individuate alcune aree semantiche 
+che dovevano essere inserite nel sito. Si è scelto di mantenere la stessa struttura nelle etichette del menu perchè non si riscontrano problematiche di 
+incoerenza e/o possibili incomprensioni. 
 Dalle etichette del menu l'utente ha da subito una chiara visione di quale sia la sezione semantica su cui si sta dirigendo. 
-\par Rispetto al documento dei requisiti si è scelto di non mostrare tutte le sotto categorie nella pagina di presentazione onde evitare 
-un accumulo di informazioni che sarebbero solamente un appesantimento dei contenuti.
 
 \section*{Compatibilità browser}
 Il sito web risulta essere compatibile con i principali browser sul mercato in particolare è stato testato su:
 \begin{itemize}
  \item Chrome
  \item Firefox
+ \item Opera
+ \item Internet Explorer 10
 \end{itemize}
-I browser utilizzati per lo sviluppo sono stati Chrome e Firefox, per quanto riguarda la compatibilità del tema con gli altri principali browser sarà analizzata in una fase successiva.
 
 \end{document}          
