--- a/documentazione/visualDesign/dipompeo-layout.tex
+++ b/documentazione/visualDesign/dipompeo-layout.tex
@@ -61,7 +61,7 @@ Gli oggetti cliccabili risultano essere tutti distinguibili grazie all'utilizzo 
 \par Le varie sezioni del sito mantengono la stessa disposizione degli elementi non causando ``labirintite'' all'utente.
 \par I risultato ottenuti per il download dell'homepage si possono considerare accettabili. \'E stato misurato un tempo di download e formattazione del DOM pari a 1,2sec utilizzando
 una connessione a larga banda (>4Mbit/s). Il tempo di download risulta essere ottimale, secondo i parametri rilasciati da Google inc.
-
+\newpage
 \section*{Presentazione della pagina}
 Si nota che alla risoluzione ottimale (1200px di larghezza) l'applicazione web risulta essere completamente prova di scroll orizzontali.
 Anche diminuendo la risoluzione a 1024px di larghezza l'applicazione risulta priva di scroll orizzontali. Le due risoluzioni secondo studio statistico del consorzio W3C 
@@ -74,24 +74,38 @@ L'applicazione web rimane utilizzabile interamente anche tramite l'utilizzo di d
 della famigli web-kit e moz. Sono stati eseguiti test di usabilità anche sul browser della famigli Internet Explor, in particolare IE8, senza segnale mal funzionamenti.
 
 \begin{figure}[h!]%
-    \includegraphics[width=0.9\textwidth,keepaspectratio=true]{../img/compOpera}
+    \includegraphics[width=0.8\textwidth,keepaspectratio=true]{../img/compChrome}
     \centering
-    \caption{Compatibilità Opera}%
-    \label{fig:compOpera}%
+    \caption{Compatibilità Chrome}%
+    \label{fig:compChrome}%
 \end{figure}
 
 \begin{figure}[h!]%
-    \includegraphics[width=0.9\textwidth,keepaspectratio=true]{../img/compFirefox}
+    \includegraphics[width=0.8\textwidth,keepaspectratio=true]{../img/compFirefox}
     \centering
     \caption{Compatibilità Firefox}%
     \label{fig:compFirefox}%
 \end{figure}
 
 \begin{figure}[h!]%
-    \includegraphics[width=0.9\textwidth,keepaspectratio=true]{../img/compOpera}
+    \includegraphics[width=0.8\textwidth,keepaspectratio=true]{../img/compOpera}
     \centering
     \caption{Compatibilità Opera}%
     \label{fig:compOpera}%
+\end{figure}
+\newpage
+\begin{figure}[h!]%
+    \includegraphics[width=0.8\textwidth,keepaspectratio=true]{../img/compIe10}
+    \centering
+    \caption{Compatibilità Internet Explorer 10}%
+    \label{fig:compIe10}%
+\end{figure}
+
+\begin{figure}[h!]%
+    \includegraphics[width=0.8\textwidth,keepaspectratio=true]{../img/compIe9}
+    \centering
+    \caption{Compatibilità Internet Explorer 9}%
+    \label{fig:compIe9}%
 \end{figure}
 
 \newpage
